[package]
name = "rusty_db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bencode = "0.2"
thiserror = "1.0"
byteorder = "1.4"
crc32fast = "1.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
